Minor changes: prevented tooltip text from being selected, removed shadow from navbar in dark mode.

--- a/client/src/styles/components/tooltip.css
+++ b/client/src/styles/components/tooltip.css
@@ -9,6 +9,7 @@
   color: #F9F7F7;
   padding: .5rem 1rem;
   border-radius: 6px;
+  user-select: none;
 
   /* Position the tooltip text */
   position: absolute;
